--- a/docker_js.html
+++ b/docker_js.html
@@ -1,6 +1,6 @@
 <html>
       <head>
-         <link rel="stylesheet" href="my.css">
+         <link rel="stylesheet" href="docker_js_css.css">
       </head>
     <body>
     <div align='left' id='s1'>
@@ -39,6 +39,6 @@
     <button onclick="fun1();" >Add Cmd</button></div>
 
     </div>
-<script src="my.js"></script>
+<script src="main.js"></script>
 </body>
 </html>
